# MLOps_2025_Project

./: .dockerignore  Deploy.py  Dockerfile  README.md  requirements.txt  train.py
.github/workflows/: dagger.yml  docker-build.yml
MLOps_2025_Project/: Makefile  README.md  pyproject.toml
notebooks/: 2023  main.ipynb
notebooks/mlruns/963873149639731999/: meta.yaml
src/: utils.py
src/data/: data.py
src/data/artifacts/: outlier_summary.csv  scaler.pkl  train_data_gold.csv  training_data.csv
src/models/: Deploy.py  evaluate.py  train.py
workflow/: go.mod  pipeline.go
