[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLOps_project_module"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group_42" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["MLOps_project_module"]
include = ["pyproject.toml", "MLOps_project_module/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["MLOps_project_module"]
force-sort-within-sections = true

